--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
+astroid==1.6.2
 beautifulsoup4==4.6.0
-lxml==4.2.0
+isort==4.3.4
+lazy-object-proxy==1.3.1
+lxml==4.2.1
+mccabe==0.6.1
+pylint==1.8.3
+six==1.11.0
+wrapt==1.10.11
