fix: resolve Poetry script execution issue by correcting package configuration
- Change from package mode to script mode with package-mode = false
- Update script entry point from 'proxygenerator.main:main' to 'src.proxygenerator.main:main'
- Fix Poetry configuration conflict between packages and scripts definitions
- Resolve 'format' error when running 'poetry run proxygenerator'
- All execution methods now work correctly including Poetry run, shell, and direct Python execution

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ description = "A simple proxy generator script"
 authors = ["Kouni <kouni@example.com>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "proxygenerator", from = "src"}]
+package-mode = false
 
 [tool.poetry.scripts]
-proxygenerator = "proxygenerator.main:main"
+proxygenerator = "src.proxygenerator.main:main"
 
 [tool.poetry.dependencies]
 python = "^3.13"
