ci: add test execution before proxy generation
- Run full test suite using pytest before generating proxies
- Ensure code quality and functionality before each execution
- Install dev dependencies to support testing
- Stop workflow if any tests fail

--- a/.github/workflows/proxy-generator.yml
+++ b/.github/workflows/proxy-generator.yml
@@ -37,7 +37,12 @@ jobs:
     
     - name: Install dependencies
       if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-      run: poetry install --no-dev
+      run: poetry install
+    
+    - name: Run tests
+      run: |
+        poetry run pytest -v
+        echo "All tests passed successfully"
     
     - name: Create data directory
       run: mkdir -p data
