ci: add push trigger for workflow testing
- Enable workflow execution on push to main branch
- Trigger on changes to workflow, source code, or dependencies
- Allow immediate testing of GitHub Actions configuration

--- a/.github/workflows/proxy-generator.yml
+++ b/.github/workflows/proxy-generator.yml
@@ -6,6 +6,12 @@ on:
     - cron: '0 * * * *'
   workflow_dispatch:
     # Allow manual triggering
+  push:
+    branches: [ main ]
+    paths:
+      - '.github/workflows/proxy-generator.yml'
+      - 'src/**'
+      - 'pyproject.toml'
 
 jobs:
   generate-proxies:
