--- a/.github/workflows/proxy-generator.yml
+++ b/.github/workflows/proxy-generator.yml
@@ -47,6 +47,7 @@ jobs:
     
     - name: Run tests
       run: |
+        export PYTHONPATH="${PYTHONPATH}:src"
         poetry run pytest -v
         echo "All tests passed successfully"
     
@@ -55,6 +56,7 @@ jobs:
     
     - name: Run proxy generator
       run: |
+        export PYTHONPATH="${PYTHONPATH}:src"
         poetry run proxygenerator
         echo "Proxy generation completed at $(date)"
     
