refactor: separate proxy data generation from version control
- Remove data/proxies.json from version control
- Add data/.gitkeep to preserve directory structure
- GitHub Actions will generate proxy data without committing
- Keep generated data as artifacts only
- Focus on code versioning rather than data versioning

--- a/.github/workflows/proxy-generator.yml
+++ b/.github/workflows/proxy-generator.yml
@@ -79,14 +79,12 @@ jobs:
         path: data/proxies.json
         retention-days: 7
     
-    - name: Commit and push if changed
+    - name: Check proxy generation result
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add data/proxies.json
-        if git diff --staged --quiet; then
-          echo "No changes to commit"
+        if [ -f "data/proxies.json" ]; then
+          echo "✅ Proxy generation successful"
+          echo "Generated $(jq length data/proxies.json) proxies"
         else
-          git commit -m "chore: update proxy data - $(date '+%Y-%m-%d %H:%M:%S')"
-          git push
+          echo "❌ Proxy generation failed"
+          exit 1
         fi
