ci: force add proxy data file in GitHub Actions
- Use git add -f to override .gitignore for proxy data
- Allow GitHub Actions to commit generated proxy data
- Fix ignored file error in automated workflow

--- a/.github/workflows/proxy-generator.yml
+++ b/.github/workflows/proxy-generator.yml
@@ -88,7 +88,7 @@ jobs:
           echo "✅ Proxy generation successful"
           echo "Generated $(jq length data/proxies.json) proxies"
           
-          git add data/proxies.json
+          git add -f data/proxies.json
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
