fix: update GitHub Actions workflow for new metadata format
- Fix jq commands to handle new JSON structure with metadata
- Add format detection for backward compatibility
- Extract count from metadata.count instead of array length
- Display generation timestamp from metadata
- Properly access proxies array in new format

--- a/.github/workflows/proxy-generator.yml
+++ b/.github/workflows/proxy-generator.yml
@@ -73,11 +73,25 @@ jobs:
         if [ -f "data/proxies.json" ]; then
           echo "Generated proxy data:"
           echo "File size: $(du -h data/proxies.json | cut -f1)"
-          COUNT=$(jq length data/proxies.json)
-          echo "Number of proxies: $COUNT"
-          echo "count=$COUNT" >> $GITHUB_OUTPUT
-          echo "Sample proxies:"
-          jq -r '.[:3][] | "\(.IP_Address_td):\(.Port_td) (\(.Country_td))"' data/proxies.json
+          
+          # Check if new format with metadata exists
+          if jq -e '.metadata' data/proxies.json > /dev/null 2>&1; then
+            # New format with metadata
+            COUNT=$(jq '.metadata.count' data/proxies.json)
+            GENERATED_AT=$(jq -r '.metadata.generated_at' data/proxies.json)
+            echo "Number of proxies: $COUNT"
+            echo "Generated at: $GENERATED_AT"
+            echo "count=$COUNT" >> $GITHUB_OUTPUT
+            echo "Sample proxies:"
+            jq -r '.proxies[:3][] | "\(.IP_Address_td):\(.Port_td) (\(.Country_td))"' data/proxies.json
+          else
+            # Legacy format (array)
+            COUNT=$(jq 'length' data/proxies.json)
+            echo "Number of proxies: $COUNT"
+            echo "count=$COUNT" >> $GITHUB_OUTPUT
+            echo "Sample proxies:"
+            jq -r '.[:3][] | "\(.IP_Address_td):\(.Port_td) (\(.Country_td))"' data/proxies.json
+          fi
         else
           echo "No proxy data generated"
           exit 1
