--- a/.github/workflows/proxy-generator.yml
+++ b/.github/workflows/proxy-generator.yml
@@ -123,29 +123,89 @@ jobs:
         mkdir -p _site
         cp data/proxies.json _site/
         
-        # Create index page
-        cat > _site/index.html << 'EOF'
+        # Get current timestamp and proxy count
+        CURRENT_TIME=$(date -u "+%Y-%m-%d %H:%M:%S UTC")
+        PROXY_COUNT="${{ needs.generate-proxies.outputs.proxy-count }}"
+        
+        # Create index page with proper variable substitution
+        cat > _site/index.html << EOF
         <!DOCTYPE html>
         <html>
         <head>
           <title>ProxyGenerator Data</title>
           <meta charset="utf-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
           <style>
-            body { font-family: Arial, sans-serif; margin: 40px; }
-            .info { background: #f5f5f5; padding: 20px; border-radius: 5px; }
+            body { 
+              font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; 
+              margin: 40px; 
+              background: #f8f9fa; 
+            }
+            .container { max-width: 800px; margin: 0 auto; background: white; padding: 40px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+            .info { background: #e3f2fd; padding: 20px; border-radius: 5px; border-left: 4px solid #2196f3; }
+            .stats { display: flex; gap: 20px; margin: 20px 0; }
+            .stat { background: #f5f5f5; padding: 15px; border-radius: 5px; flex: 1; text-align: center; }
+            .stat-number { font-size: 24px; font-weight: bold; color: #2196f3; }
+            .download-btn { 
+              display: inline-block; 
+              background: #2196f3; 
+              color: white; 
+              padding: 12px 24px; 
+              text-decoration: none; 
+              border-radius: 5px; 
+              font-weight: bold;
+            }
+            .download-btn:hover { background: #1976d2; }
+            pre { background: #f5f5f5; padding: 15px; border-radius: 5px; overflow-x: auto; }
           </style>
         </head>
         <body>
-          <h1>ProxyGenerator</h1>
-          <div class="info">
-            <p>Fresh proxy data updated every hour</p>
-            <p>Last updated: $(date)</p>
-            <p>Total proxies: ${{ needs.generate-proxies.outputs.proxy-count }}</p>
+          <div class="container">
+            <h1>🌐 ProxyGenerator</h1>
+            <div class="info">
+              <p><strong>Fresh proxy data updated every hour</strong></p>
+              <p>Last updated: ${CURRENT_TIME}</p>
+            </div>
+            
+            <div class="stats">
+              <div class="stat">
+                <div class="stat-number">${PROXY_COUNT}</div>
+                <div>Total Proxies</div>
+              </div>
+              <div class="stat">
+                <div class="stat-number">✅</div>
+                <div>Validated</div>
+              </div>
+              <div class="stat">
+                <div class="stat-number">🔄</div>
+                <div>Auto-Updated</div>
+              </div>
+            </div>
+            
+            <h2>📥 Download</h2>
+            <p>
+              <a href="proxies.json" class="download-btn">Download proxies.json</a>
+            </p>
+            
+            <h3>📖 Usage Examples</h3>
+            <h4>cURL:</h4>
+            <pre>curl -O https://kouni.github.io/ProxyGenerator/proxies.json</pre>
+            
+            <h4>Python:</h4>
+            <pre>import requests
+data = requests.get('https://kouni.github.io/ProxyGenerator/proxies.json').json()
+metadata = data['metadata']  # Generation info
+proxies = data['proxies']    # Proxy list</pre>
+            
+            <h4>JavaScript:</h4>
+            <pre>fetch('https://kouni.github.io/ProxyGenerator/proxies.json')
+  .then(response => response.json())
+  .then(data => {
+    console.log('Generated at:', data.metadata.generated_at);
+    console.log('Proxy count:', data.metadata.count);
+    console.log('Proxies:', data.proxies);
+  });</pre>
           </div>
-          <h2>Download</h2>
-          <ul>
-            <li><a href="proxies.json">proxies.json</a> - Raw proxy data</li>
-          </ul>
         </body>
         </html>
         EOF
