fix: update deprecated safety check to safety scan command
- Replace deprecated 'safety check' with new 'safety scan' command
- Update both GitHub Actions workflow and README documentation
- Tested new command successfully scans 58 dependencies with no issues

--- a/.github/workflows/proxy-generator.yml
+++ b/.github/workflows/proxy-generator.yml
@@ -54,7 +54,7 @@ jobs:
     
     - name: Run security scan
       run: |
-        poetry run safety check
+        poetry run safety scan
         echo "Security scan completed successfully"
     
     - name: Run tests
