fix: enhance GitHub Actions cron reliability and debugging
- Add workflow trigger diagnostics with timestamp and event info
- Enhance workflow_dispatch with force_refresh input option
- Create CRON_TEST.md for troubleshooting scheduled workflows
- Improve cron documentation with UTC timezone clarification
- Add manual trigger instructions for reactivating dormant schedules

This commit helps diagnose why hourly cron jobs stopped running

--- a/.github/workflows/proxy-generator.yml
+++ b/.github/workflows/proxy-generator.yml
@@ -7,10 +7,16 @@ permissions:
 
 on:
   schedule:
-    # Run every hour at minute 0
+    # Run every hour at minute 0 (UTC)
     - cron: '0 * * * *'
   workflow_dispatch:
     # Allow manual triggering
+    inputs:
+      force_refresh:
+        description: 'Force refresh proxy data'
+        required: false
+        default: 'false'
+        type: boolean
   push:
     branches: [ main ]
     paths:
@@ -25,6 +31,13 @@ jobs:
       proxy-count: ${{ steps.count.outputs.count }}
     
     steps:
+    - name: Workflow trigger info
+      run: |
+        echo "Workflow triggered by: ${{ github.event_name }}"
+        echo "Current time (UTC): $(date -u)"
+        echo "Repository: ${{ github.repository }}"
+        echo "Branch: ${{ github.ref_name }}"
+    
     - name: Checkout code
       uses: actions/checkout@v4
     
